--- a/bibliography.bib
+++ b/bibliography.bib
@@ -216,3 +216,34 @@
 	Publisher = {BITTORRENT},
 	Title = {The BitTorrent protocol specification},
 	Year = {2008}}
+	
+@article{doi:10.1177/0165551506075327,
+author = {Peter Johan Lor and Johannes Jacobus Britz},
+title ={Is a knowledge society possible without freedom of access to information?},
+journal = {Journal of Information Science},
+volume = {33},
+number = {4},
+pages = {387-397},
+year = {2007},
+doi = {10.1177/0165551506075327},
+URL = {https://doi.org/10.1177/0165551506075327},
+eprint = {https://doi.org/10.1177/0165551506075327},
+abstract = { Modern information and communication technologies (ICTs) are seen not only as allowing global economic activities and the sharing of knowledge, but also as favouring transparency and democracy by creating space and a public sphere for civil society. The internet, and in particular the world wide web, have proved a powerful tool in both the manipulation of economic activities and the mobilization of civil society. Much is made of the democratizing effect of ICTs in e-government. Yet there are governments that attempt to control in an authoritarian manner both who accesses the internet and what content may be accessed and used. The question arises whether an information society and, more critically, a knowledge society can develop in the absence of freedom of access to information, freedom of expression and freedom to access the digital economy. Against this broad background the authors put forward four pillars of a knowledge society: (a) ICTs and connectivity, (b) content and the usability thereof, (c) infrastructure other than ICTs, and (d) human capacity. They attempt to evaluate the effect of authoritarian governmental control of access and content on each of them. It is argued from an ethical perspective, and more specifically from a perspective of social justice that, while a technologically oriented concept of the information society may not be incompatible with severe state control, a more multi-dimensional knowledge society cannot develop under such circumstances. Freedom is fundamental to participation in a knowledge society. Purely pragmatic arguments lead to the same conclusion. }}
+
+@article{binde2005towards,
+  title={Towards knowledge societies: UNESCO world report},
+  author={Bind{\'e}, J{\'e}r{\^o}me},
+  year={2005},
+  publisher={UNESCO}
+}
+
+@article{assembly1948universal,
+  title={Universal declaration of human rights},
+  author={Assembly, UN General},
+  journal={UN General Assembly},
+  year={1948}
+}
+
+
+
+
