--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -2,22 +2,32 @@
 \pagenumbering{arabic}
 
 \begin{displayquote}
-The SAFE Network is a decentralized data storage and communications network that provides a secure, efficient
+The SAFE Network is a decentralised data storage and communications network that provides a secure, efficient
 and low-cost infrastructure for everyone \cite{safenetwork}.
 \end{displayquote}
 
-\cite{WinNT} The SAFE Network \cite{safenetwork} is an open-source project being developed by a Scottish company Maidsafe \cite{maidsafe}. Their aim is to build "The World's First Autonomous Data Network". An 'Autonomous Data Network' in simple terms, is "...a network that manages all our data and communications without any human intervention and without intermediaries" \cite{autonomous-data-networks}. This network will be decentralised, splitting data and then storing it around the world on computers called 'vaults'. I will go into more detail on the SAFE Network and how it works in \textit{Chapter \ref{ch:architecture}}.
+\section{The SAFE Network}
+
+The SAFE Network \cite{safenetwork} is an open-source project being developed by a company in Scotland called Maidsafe \cite{maidsafe}. Their aim is to build "The World's First Autonomous Data Network". An `Autonomous Data Network' in simple terms is "...a network that manages all our data and communications without any human intervention and without intermediaries" \cite{autonomous-data-networks}. The network is comprised of \textit{vaults}. A \textit{vault} is a simple program that anyone can run on their computer. Together, all the vaults that comprise the SAFE Network work together to store and serve data. As anyone can run a \textit{vault}, the network (which again works autonomously) stores data in a decentralised manner. Owners of \textit{vaults} are compensated for their computers resources, which encourages more \textit{vaults} to join the network. Increasing its reliability, storage capacity and performance. A global network that facilitates the decentralised, highly redundant and secure storage of data creates exciting new opportunities for developers.
 
 \section{Aims}
 
-My main goal for this project is to explore the usage of the SAFE Network for the purposes of providing decentralised and 'permissionless' access to websites like Wikipedia.
+In this project I aim to not only explore the technical benefits the SAFE Network provides, but also consider the societal impact such a network could have. For the project I have developed an application that I have called SAFE Wiki. SAFE Wiki aims to provide \textit{permissionless} and decentralised access to Wikipedia, facilitated by storing an archive of it on the SAFE Network. ZIM\cite{zim} is a file format that provides a convenient way to store content that comes from the internet. A ZIM file is a self-contained entity that can hold `copies' of entire websites, such as Wikimedia content, for the purposes of viewing them offline. SAFE Wiki will be able to write the ZIM files to the SAFE Network and then provide the capability for anyone to browse them. 
 
-The program I build will be able to upload ZIM\cite{zim} files to the SAFE Network, provide public links to everyone using the application and then be able to read/browse the files. These files will be immutable, this is to help ensure that once a user has uploaded a ZIM file to the network, that it cannot be altered by anyone once it has been uploaded (apart from the functionality to delete it). ZIM files are a convenient way of being able to package/archive a website (web content) into an offline file that can then be browsed and distributed easily.
-
-By building this application, it will be easy to draw conclusions on whether this method of 'archiving' websites to the SAFE Network is sensible. ZIM files themselves can easily be tens of gigabytes in size. Thus in building this program it will be feasible to ascertain how well the SAFE Network can handle large files.
+Through building the application I hope to explore the architectural and developmental challenges in working with such a new project. With a working product it will then be possible to draw conclusions on whether or not having Wikipedia hosted on the SAFE Network will be useful to people.
 
 \section{Motivation}
 
-In my opinion, the right to liberty and the unobstructed access to information is the most important right we have. Throughout history, a common tactic of \textit{evil} governments or people is to block access to information. By doing this, they try to break down a culture, to control people. The most prominent example of this was the Nazi Book Burning Campaign \cite{book-burning}. The goal of this was to destroy any literature or information that could subvert the ideologies that Nazism is built upon.
+\subsection{Technical Impact}
 
-The SAFE Network is an 'internet' which is impossible to block or orchestrate what content can be accessed without blocking access to the entire thing. A network that is built from the ground up to protect the free access to data, working autonomously and without judgement on what information is being stored and shared. By hosting archives/copies of websites such as Wikipedia and Wikispecies on the SAFE Network, it could allow people from all over the world to access content that they haven't before. More importantly for some people, for them to be able to access the content without their governments being able to detect what they are looking at.
+Traditional software architectures that are commonly associated with the internet, such as client-server, cannot be used with the SAFE Network. Thus different architectural approaches must be taken when building the software that interacts with the network. It is always stimulating to work with new technology and the SAFE Network definitely promises that opportunity. Through this report I hope to not only convey my experience working with the SAFE Network, but also outline any flaws and issues I can see with both adoption and practical usage. This is in combination with exploring the new opportunities the network provides for softare development.
+
+\subsection{Cultural Impact}
+
+In my opinion, the right to liberty and the unobstructed access to information is the most important right we have. Throughout history, a common tactic of oppressive governments is to block access to information. By doing this they try to break down a culture. To control people. The most prominent example of this was the Nazi Book Burning Campaign \cite{book-burning}. The goal of this was to destroy any literature or information that could subvert the ideologies that Nazism is built upon.
+
+\citeauthor{doi:10.1177/0165551506075327} propose that a true `Knowledge Society' cannot be achieved without freedom of information\cite{doi:10.1177/0165551506075327}. A `Knowledge Society' is defined by \citeauthor{binde2005towards} in \citetitle{binde2005towards}\cite{binde2005towards} to be a society in which the dissemination of information (knowledge) is open and collaborative. Specifically, the SAFE Network ensures the freedom of access to information. This is why I find the prospect of bringing Wikipedia to the SAFE Network to be such an exciting concept. The benefits to society when citizens are permitted the liberty to seek and consume new ideas cannot be overstated.
+
+\begin{displayquote}
+Article 19, Universal Declaration of Human Rights\cite{assembly1948universal}: \textit{Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers.}
+\end{displayquote}
