Go over Chapter 2
Chapter 2 has been refined and I am now far more happy with it. I have
removed irelevant details and improved the flow of the chapter.
Specicially I have removed some discussion on the technical aspects of
the SAFE Network, in favour of discussing them in the next chapter.

--- a/sections/03-the-architecture-of-the-safe-network.tex
+++ b/sections/03-the-architecture-of-the-safe-network.tex
@@ -58,3 +58,5 @@ Node ageing and churn are hence essential security features of the network and m
 Data stored on the SAFE Network can take one of two forms. It can either be \textit{Immutable Data} or \textit{Mutable Data}. A Mutable Data Structure (often abbreviated MD) is a key value storage mechanism that allows for the storage of 1000 entries at a maximum size of 1Mb. A MD has a 256-Bit address to specify its location. An Immutable Data Structure only stores a single 'value', its address on the network is derived from the hash of binary data it contains. An Immutable Data structure can itself only be 1Mb in size, but through the use of a Data-Map this limit can be subverted. I will talk more in depth about the Data-Map when we discuss my project, as its properties are very important to my application. As their names imply, Mutable Data can be freely changed and updated whereas Immutable Data cannot. Its clear to see that if you change the contents of Immutable Data then it will no longer correspond to the address at which it is stored. As mentioned previously, it is this property of Immutable Data that eliminates duplication on the network. If a user uploads the same file as another user they are simply presented with another \textit{key} to access that data. If a user 'deletes' the data it will remain on the network as another user still maintains the key to access it.
 
 \section{Privacy and Anonymity}
+\section{Safecoin}
+\section{Accounts}
