--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -1,1 +1,7 @@
 \chapter{Evaluation}
+
+%\subsection{An Example, Netflix on the SAFE Network}
+%
+%Unlike BitTorrent, the SAFE Network could indeed be used to facilitate a service like Netflix. At its core, Netflix is about data. Their main goal being streaming the data that they have (video) to as many users around the world as possible and to do it as fast as possible. Although they would be able to benefit from redundancy and reduced server costs, there are flaws in the BitTorrent protocol that make it extremely difficult to justify it as a means of facilitating a website like Netflix. The biggest issue being ownership of data. As discussed previously, websites like Netflix have to have 'ownership of data'. They have to be able to control and \textit{mutate} the access of individuals to content. They simply cannot do this on BitTorrent. Another glaring whole in that approach is that of the health of the swarm. For content (data) to be available, nodes have to be online and sharing that file. This could mean that popular content would be readily \textit{seeded} but more obscure content may not be. The extreme of this being that the most obscure content might only be \textit{seeded} by Netflix themselves, resulting in a return to the Client-Server model they currently have. The SAFE Network solves these issues. Ownership of data is clearly defined, you own your data and nobody else does. Architecturally the SAFE Network insures that there are multiple copies of data spread around the network, meaning files will always be redundantly stored across the network. 
+%
+%A Netflix style of service very much fits the \textit{Fat Client} style of architecture. Video playback is already processed locally so the content delivery system is the key part of the system that changes. Considerations to how things like 'Suggestions' would work are the biggest challenges in my opinion. Currently, that kind of feature fits the client server model quite well. Netflix gathers information about the shows you watch then suggests similar content that you might like to view. As this happens server side it is a continually updating entity that can improve and adapt, the inner-workings completely hidden from the user. With a \textit{serverless architectural} model this approach is simply unfeasible, There is no \textit{processing} of information on the SAFE Network. This would mean that to perform actions like 'content suggestion' you would have to perform it locally, client side. This applies to any application that is built on the SAFE Network. Users are quite used to visiting a service, such as Netflix or Facebook, and seeing newly \textit{generated} content that was created whilst their client was off. To account for this, new approaches in how to generate content will have to be thought of. This might be as simple as generating/processing the content when the user first opens the client and then displaying it to them. A more complicated approach might be to encourage users to keep applications open in the background so this processing can take place. In the browser this makes sense, users are familiar with the concept of keeping 'browser tabs' open. Often 'bookmarking' or 'favouriting' their favourite sites. One could envision a system wherein these 'tabs' would be refreshed in the background so users don't notice any delay when opening up the application (website). Traditional 'desktop' applications don't have this same luxury. Users typically 'quit' applications when not in use, so they would either need to be kept alive in the background (which may annoy some) or rely on quickly generating/processing content on startup.
